changed input placeholder from 14px to 13px to fix issue of bottom pixels getting cropped from the bottom

--- a/login.css
+++ b/login.css
@@ -61,7 +61,7 @@ html, body {
 	float:left;
 	margin-left:13px;
 	height:14px;
-	font-size:14px;
+	font-size:13px;
 	padding:0;
 	border:none;
 	width:calc(100% - 61px);
